# detour-rs

./: Cargo.toml  README.md  calls.txt
.github/workflows/: rust.yml
examples/: messageboxw_detour.rs
src/: macros.rs
src/alloc/: proximity.rs
src/arch/x86/: mod.rs
src/detours/: generic.rs  raw.rs  statik.rs
tests/: lib.rs
