[package]
name = "detour3"
version = "0.0.0"
authors = ["Elliott Linder <elliott.darfink@gmail.com>, Jakobzs <31919330+Jakobzs@users.noreply.github.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/Jakobzs/detour-rs"
documentation = "https://docs.rs/detour3"
description = "A cross-platform detour library written in Rust"
homepage = "https://github.com/Jakobzs/detour-rs"
keywords = ["detour", "hook", "function", "api", "redirect"]
readme = "README.md"
edition = "2021"

[badges]
azure-devops = { project = "darfink/detour-rs", pipeline = "darfink.detour-rs" }

[dependencies]
cfg-if = "1.0.0"
generic-array = "0.14.5"
lazy_static = "1.4"
libc = "0.2.126"
mmap = { package = "mmap-fixed-fixed", version = "0.1.1" }
region = "3.0.0"
slice-pool = "0.4.1"

[dev-dependencies]
matches = "0.1.9"

[features]
default = ["nightly"]
nightly = []

[[example]]
name = "messageboxw_detour"
crate-type = ["cdylib"]

[target."cfg(any(target_arch = \"x86\", target_arch = \"x86_64\"))".dependencies]
udis = { package = "libudis86-sys", version = "0.2.1" }

[target."cfg(windows)".dev-dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "windef", "winnt", "libloaderapi", "winerror"] }
